<resources>
    <string name="app_name">Booksies</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_user">Create a User</string>
    <string name="register">Register</string>
    <string name="email">Email</string>


    <string name="add_title">Title</string>
    <string name="add_author">Author</string>
    <string name="add_ISBN">ISBN</string>
    <string name="add_comments">Comments</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="my_profile">My Profile</string>

    <string name="user_cellphone">Cell: </string>
    <string name="user_email">Email: </string>
    <string name="user_notifications">Notifications</string>
    <string name="user_edit">Edit</string>
    <string name="phone">Phone number</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="booklover123">Booklover123</string>
    <string name="edit_button">Edit</string>
    <string name="accept_button">Accept</string>
    <string name="profile_picture">profile_picture</string>

    <string-array name="filter_items">
        <item>No Filter</item>
        <item>Available</item>
        <item>Requested</item>
        <item>Accepted</item>
        <item>Borrowed</item>
    </string-array>

    <string-array name="req_filter_items">
        <item>No Filter</item>
        <item>Requested</item>
        <item>Accepted</item>
        <item>Borrowed</item>
    </string-array>

    <string-array name="sort_items">
        <item>Title</item>
        <item>Author</item>
        <item>ISBN</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_view_maps">Map</string>
    <string name="no_search_results_found">No search results found</string>
    <string name="my_books">My Books</string>
    <string name="find_books">Find books ...</string>
    <string name="requests">Requests</string>


</resources>