<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/view_user_picture"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/baseline_account_circle_24" />

    <TextView
        android:id="@+id/view_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/view_phone_number_title"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/user_cellphone"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/view_phone_number_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/textColor"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/view_email_title"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/user_email"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/view_email_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="4"
            android:textColor="@color/textColor"/>

    </LinearLayout>

</LinearLayout>